# seekr-rs

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  TODO.org  crates.nix  db.sh  entity.sh  flake.nix  publish.sh  rust-toolchain.toml  treefmt.nix
.github/workflows/: unit-tests.yml
db/: SCHEMA.sql  dev.db
entity/: Cargo.toml
entity/src/: lib.rs  people.rs  prelude.rs
migration/src/: m20220101_000001_create_table.rs
migrations/: 20231106195157_people.sql  20231228194052_people.sql
seekr-macro/: Cargo.toml
seekr-macro/src/: lib.rs
seekr-migration/: Cargo.toml
seekr-migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231228_180503_seekr.rs  main.rs
src/: birthday.rs  cli.rs  email.rs  embed.rs  lib.rs  main.rs  model.rs  name.rs  people.rs  person.rs  types.rs  users.rs
src/entity/: mod.rs  people.rs  prelude.rs
src/routes/: embed.rs  get_person.rs  language_detection.rs  list_people.rs  mod.rs  not_found.rs  post_person.rs
src/scrape/: mod.rs  test.rs
src/web/: auth.rs  mod.rs  person.rs  protected.rs
templates/: person.html
web/: index.html
web/ts/: #desktop.ts#
web/ts-gen/: clubs.ts  email.ts  enums.ts  hobbies.ts  ips.ts  person.ts  phone.ts  services.ts  sources.ts
