[package]
name = "seekr-rs"
version = "0.1.0"
description = "Web based all in one OSINT tool"
edition = "2021"
readme = "README.md"
build = "build.rs"
license = "GPL-3.0-only"
authors = ["9glenda"]
categories = ["database"]
keywords = ["osint", "security"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { features = ["sqlite", "runtime-tokio", "tls-rustls", "json"] }
async-graphql = "6.0.11"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.2"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "time",
  "chrono",
  "local-time",
] }
tracing = "0.1.40"
tower-http = { version = "0.5.0", features = ["trace"] }
anyhow = "1.0.76"
rust-embed = { version = "8.1.0", features = [
  "axum",
  "axum-ex",
  # "compression",
  "mime-guess",
] }

mime_guess = "2.0.4"
lingua = "1.6.2"
serde_json = "1.0.108"
nom = "7.1.3"
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "2.0.0", features = ["axum"] }
utoipa-redoc = { version = "2.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
lto = true
strip = true
opt-level = 3
