[package]
name = "seekr-rs"
version = "0.1.0"
description = "Web based all in one OSINT tool"
edition = "2021"
readme = "README.md"
build = "build.rs"
license = "GPL-3.0-only"
authors = ["9glenda"]
categories = ["database"]
keywords = ["osint", "security"]
[workspace]
members = [".", "migration"]

[dependencies]
sqlx = { features = ["sqlite", "runtime-tokio", "tls-rustls", "json"] }
async-graphql = "6.0.11"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.2", features = ["form", "json"] }
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "time",
  "chrono",
  "local-time",
] }
tracing = "0.1.40"
tower-http = { version = "0.5.0", features = ["trace"] }
anyhow = "1.0.76"
rust-embed = { version = "8.1.0", features = ["axum", "axum-ex", "mime-guess"] }

mime_guess = "2.0.4"
lingua = "1.6.2"
serde_json = "1.0.108"
nom = "7.1.3"
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "2.0.0", features = ["axum"] }
utoipa-redoc = { version = "2.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }
# entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "0.12.10", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
tower = { version = "0.4.13", features = ["tracing", "tokio", "full"] }
thiserror = "1.0.51"
askama = { version = "0.12.1", features = ["serde", "with-axum"] }
clap = { version = "4.4.11", features = ["derive"] }
tracing-test = "0.2.4"

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
lto = true
strip = true
opt-level = 3
