[package]
name = "seekr"
description = "Web based all in one OSINT tool"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"
readme = "README.md"
keywords = ["osint", "security"]
categories = ["database"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-only"
authors = ["9glenda"]

[workspace]
members = [".", "seekr-migration", "seekr-macro"]
resolver = "2"

[dependencies]
sqlx = { version = "0.7", features = [
  "sqlite",
  "runtime-tokio",
  "tls-rustls",
  "json",
  "time",
] }
async-graphql = "6.0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.4", features = ["form", "json"] }
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "time",
  "chrono",
  "local-time",
] }
tracing = "0.1"
tower-http = { version = "0.5.0", features = ["trace"] }
anyhow = "1"
rust-embed = { version = "8", features = ["axum", "axum-ex", "mime-guess"] }

mime_guess = "2"
lingua = "1"
serde_json = "1"
nom = { version = "7.1.3", features = ["alloc"] }
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "2.0.0", features = ["axum"] }
utoipa-redoc = { version = "2.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }
seekr-migration = { version = "0.1", path = "seekr-migration" }
sea-orm = { version = "0.12.10", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
tower = { version = "0.4.13", features = ["tracing", "tokio", "full"] }
thiserror = "1"
askama = { version = "0.12.1", features = ["serde", "with-axum"] }
clap = { version = "4.4.11", features = ["derive"] }
tracing-test = "0.2.4"
proptest = "1.4.0"
rand = "0.8.5"
seaography = "0.3.0"
axum-login = "0.12.0"
askama_axum = "0.4.0"
time = "0.3.31"
password-auth = "1.0.0"
async-trait = "0.1.75"
sqlxinsert = "0.8.0"
eyre = "0.6.11"


[dev-dependencies]
seekr-macro = { version = "0.1", path = "seekr-macro", features = ["dsl"] }

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
lto = true
strip = true
opt-level = 3
