[package]
name = "seekr-macro"
description = "proc macros used in seekr"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
seekr = { path = "../.", optional = true }

[features]
dsl = ["dep:seekr"]

[lib]
proc-macro = true
