[package]
name = "seekr-migration"
description = "sea orm migration code for the seekr database"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "seekr_migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
